add data source

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <div id="tooltip" class="tooltip hidden"></div>
 
   <footer>
-    <p>Built with D3.js & d3-annotation. Data: US apparel imports (example CSV).</p>
+    <p>Built with D3.js &amp; d3-annotation. Data source: <a href="https://www.trade.gov/data-visualization/us-textile-and-apparel-imports-month" target="_blank" rel="noopener">U.S. Textile &amp; Apparel Imports (trade.gov)</a>.</p>
   </footer>
 
   <script src="js/main.js"></script>
